--- a/src/viewer.html
+++ b/src/viewer.html
@@ -27,7 +27,7 @@
 
             <div class="col-md-9 yk-center" id="room-viewer">
 
-                <iframe id="room-iframe" src="room.html" class="yk-iframe" allow="fullscreen; xr-spatial-tracking;"></iframe>
+                <iframe id="room-iframe" src="room.html" class="yk-iframe" allow="fullscreen; xr-spatial-tracking; autoplay;"></iframe>
 
                 <div id="room-info"></div>
 
