ステージアップロードできるように

--- a/src/header.html
+++ b/src/header.html
@@ -69,7 +69,7 @@
 
     // header.htmlを読み込んだ時点でモデルアップロードフォームを用意
     $(function () {
-        $("#formArea").load("modelUploadForm.html", function(){
+        $("#formArea").load("stage3dUploadForm.html", function(){
 
             var upload_btn = document.getElementById('upload-btn')
             var formArea = document.getElementById('formArea')
