--- a/src/stage3dUploadForm.html
+++ b/src/stage3dUploadForm.html
@@ -1,12 +1,12 @@
 <div class="yk-center">
 
     <!-- todo: ドラッグ&ドロップできるように -->
-    <form id="model-upload-form">
+    <form id="stage3d-upload-form">
 
         <p class="bi bi-upload yk-bi-icon-big"></p>
 
         <p class="yk-text-normal"> 
-            アップロードする3Dモデル(pmd/pmx)が含まれるzipファイルをアップロードしてください。
+            アップロードするステージ(pmd/pmx)が含まれるzipファイルをアップロードしてください。
         </p>
 
         <p class="yk-text-description">
@@ -21,28 +21,28 @@
 
     </form>
 
-    <div id="model-error-msg"></div>
+    <div id="stage3d-error-msg"></div>
 
 </div>
 
 <script>
 
     // これらはグローバル変数なのでユニークである必要がある
-    const model_upload_form = document.getElementById('model-upload-form')
-    const model_error_msg = document.getElementById('model-error-msg')
+    const stage3d_upload_form = document.getElementById('stage3d-upload-form')
+    const stage3d_error_msg = document.getElementById('stage3d-error-msg')
 
     // 親要素(form)にイベントをつけると子要素のイベントが拾える
-    model_upload_form.addEventListener('change', (e) => {
+    stage3d_upload_form.addEventListener('change', (e) => {
         let type = e.target.type;
         console.log('onChange', type);
     });
 
-    model_upload_form.addEventListener('input', (e) => {
+    stage3d_upload_form.addEventListener('input', (e) => {
         let type = e.target.type;
         console.log('onInput', type);
 
         var xhr = new XMLHttpRequest()
-        var formData = new FormData(model_upload_form)
+        var formData = new FormData(stage3d_upload_form)
 
         //var formAreaArea = document.getElementById('formAreaArea')
         formArea.hidden = true
@@ -55,7 +55,7 @@
                 if (status === 0 || (status >= 200 && status < 400)) {
                     console.log("OK. Status: " + status)
                     // アップロード完了した時点でモーションアップロードフォームを用意
-                    $("#formArea").load("motionUploadForm.html", function(){
+                    $("#formArea").load("modelUploadForm.html", function(){
                         console.log("prepare motion upload form complete")
                         formArea.hidden = false
                         formAreaPreparingMessage.hidden = true
@@ -63,12 +63,12 @@
                 }else{
                     console.log("Error. Status: " + status)
                     formAreaPreparingMessage.hidden = true
-                    error_msg.innerHTML = xhr.response
+                    stage3d_error_msg.innerHTML = xhr.response
                 }
             }
         }
         
-        var req_url = '/api/upload?file_type=model&room_id='+room_id
+        var req_url = '/api/upload?file_type=stage_3d&room_id='+room_id
         console.log(req_url)
         xhr.open('POST', req_url)
         xhr.send(formData)
