camのpose推定成功

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,8 @@
         
         </div>
 
+        <a href="./p_cam.html?room_id=01G3RPBERZ24JJ3KFC2S5ZW94W">pose推定</a>
+
         <footer id="footer" class="yk-contact">☆ご意見・ご要望はこちらまで → gakki.uec15@gmail.com</footer>
 
         <script src='./tools.js'></script>
