--- a/src/modelUploadForm.html
+++ b/src/modelUploadForm.html
@@ -1,6 +1,5 @@
 <div class="yk-center">
 
-    <!-- todo: ドラッグ&ドロップできるように -->
     <form id="model-upload-form">
 
         <p class="bi bi-upload yk-bi-icon-big"></p>
@@ -21,55 +20,67 @@
 
     </form>
 
-    <div id="model-error-msg"></div>
+    <button class="btn btn-outline-secondary" id="model-skip-btn">スキップ<span class="yk-text-description">※</span></button>
+    <p class="yk-center yk-text-description">※デフォルトのモデルが使用されます。</p>
 
 </div>
 
 <script>
 
     // これらはグローバル変数なのでユニークである必要がある
-    const model_upload_form = document.getElementById('model-upload-form')
-    const model_error_msg = document.getElementById('model-error-msg')
+    var model_upload_form = document.getElementById('model-upload-form')
+    var model_skip_btn = document.getElementById('model-skip-btn')
 
-    // 親要素(form)にイベントをつけると子要素のイベントが拾える
-    model_upload_form.addEventListener('change', (e) => {
-        let type = e.target.type;
-        console.log('onChange', type);
-    });
+    model_skip_btn.onclick = function() {
 
-    model_upload_form.addEventListener('input', (e) => {
-        let type = e.target.type;
-        console.log('onInput', type);
+        $("#formArea").load("selectMotionUploadMethod.html", function(){
+
+            formArea.hidden = false
+            formAreaPreparingMessage.hidden = true
+            error_msg.innerHTML = ""
+
+        })
+
+    }
+
+    model_upload_form.addEventListener('input', () => {
 
         var xhr = new XMLHttpRequest()
         var formData = new FormData(model_upload_form)
 
-        //var formAreaArea = document.getElementById('formAreaArea')
         formArea.hidden = true
         formAreaPreparingMessage.hidden = false
-
 
         xhr.onreadystatechange = function() {
             if (xhr.readyState === XMLHttpRequest.DONE) {
                 var status = xhr.status;
                 if (status === 0 || (status >= 200 && status < 400)) {
+
                     console.log("OK. Status: " + status)
-                    // アップロード完了した時点でモーションアップロードフォームを用意
-                    $("#formArea").load("motionUploadForm.html", function(){
-                        console.log("prepare motion upload form complete")
+
+                    $("#formArea").load("selectMotinoUploadMethod.html", function(){
+
                         formArea.hidden = false
                         formAreaPreparingMessage.hidden = true
+
+                        error_msg.innerHTML = ""
+
                     })
+
                 }else{
+
                     console.log("Error. Status: " + status)
+
+                    formArea.hidden = false
                     formAreaPreparingMessage.hidden = true
+
                     error_msg.innerHTML = xhr.response
+
                 }
             }
         }
         
         var req_url = '/api/upload?file_type=model&room_id='+room_id
-        console.log(req_url)
         xhr.open('POST', req_url)
         xhr.send(formData)
 
