--- a/src/html/form/room/3_select_motion_upload_method.html
+++ b/src/html/form/room/3_select_motion_upload_method.html
@@ -29,7 +29,7 @@
 
     select_video_btn.onclick = function() {
 
-        $("#formArea").load("cameraPoseDetection.html", function(){
+        $("#formArea").load("html/form/room/4_camera_pose_detection.html", function(){
             formArea.hidden = false
             formAreaPreparingMessage.hidden = true
             error_msg.innerHTML = ""
@@ -39,7 +39,7 @@
 
     select_vmd_btn.onclick = function() {
 
-        $("#formArea").load("motionUploadForm.html", function(){
+        $("#formArea").load("html/form/room/4_upload_motion.html", function(){
             formArea.hidden = false
             formAreaPreparingMessage.hidden = true
             error_msg.innerHTML = ""
