--- a/src/html/form/room/4_camera_pose_detection.html
+++ b/src/html/form/room/4_camera_pose_detection.html
@@ -72,7 +72,7 @@
 
             // confirm.hidden = false
 
-            $("#formArea").load("detailForm.html", function(){
+            $("#formArea").load("html/form/room/6_detail.html", function(){
                 formArea.hidden = false
                 formAreaPreparingMessage.hidden = true
                 error_msg.innerHTML = ""
