--- a/src/html/form/room/5_upload_audio.html
+++ b/src/html/form/room/5_upload_audio.html
@@ -29,7 +29,7 @@
 
     audio_skip_btn.onclick = function() {
 
-        $("#formArea").load("detailForm.html", function(){
+        $("#formArea").load("html/form/room/6_detail.html", function(){
             formArea.hidden = false
             formAreaPreparingMessage.hidden = true
             error_msg.innerHTML = ""
@@ -51,7 +51,7 @@
                 if (status === 0 || (status >= 200 && status < 400)) {
                     console.log("OK. Status: " + status)
 
-                    $("#formArea").load("detailForm.html", function(){
+                    $("#formArea").load("html/form/room/detail.html", function(){
 
                         formArea.hidden = false
                         formAreaPreparingMessage.hidden = true
