--- a/src/html/header.html
+++ b/src/html/header.html
@@ -57,7 +57,7 @@
             </div>
             
             <div class="modal-body yk-center">
-                <iframe src="login.html" class="yk-iframe"></iframe>
+                <iframe src="html/form/user/login.html" class="yk-iframe"></iframe>
             </div>
             
         </div>
@@ -80,7 +80,7 @@
 
     // Upload Modal 関係
     $(function () {
-        $("#formArea").load("stage3dUploadForm.html", function(){
+        $("#formArea").load("html/form/room/1_upload_stage3d.html", function(){
 
             formArea.hidden = true
             formAreaPreparingMessage.hidden = false
