--- a/src/index.html
+++ b/src/index.html
@@ -51,8 +51,8 @@
 
         <script>
             $(function () {
-                $("#header").load("header.html", function(){
-                    $("#side-bar").load("side-bar.html", function(){
+                $("#header").load("html/header.html", function(){
+                    $("#side-bar").load("html/side-bar.html", function(){
 
                         search_btn = document.getElementById('search-button');
 
