--- a/src/html/form/room/4_upload_motion.html
+++ b/src/html/form/room/4_upload_motion.html
@@ -54,7 +54,7 @@
                 if (status === 0 || (status >= 200 && status < 400)) {
                     console.log("OK. Status: " + status)
                     // アップロード完了した時点で詳細フォームを用意
-                    $("#formArea").load("audioUploadForm.html", function(){
+                    $("#formArea").load("html/form/room/5_upload_audio.html", function(){
                         console.log("prepare audio upload form complete")
                         formArea.hidden = false
                         formAreaPreparingMessage.hidden = true
