--- a/src/html/form/room/6_detail.html
+++ b/src/html/form/room/6_detail.html
@@ -68,7 +68,7 @@
                 var status = xhr.status;
                 if (status === 0 || (status >= 200 && status < 400)) {
                     console.log("OK. Status: " + status)
-                    $("#formArea").load("success_create.html", function(){
+                    $("#formArea").load("html/message/success_create.html", function(){
                         console.log("room create success")
                     })
                 }else{
