--- a/src/html/form/user/login.html
+++ b/src/html/form/user/login.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
 
         <!-- 追加用 CSS -->
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="../../../style.css">
 
         <!-- Sign In With Google -->
         <script src="https://accounts.google.com/gsi/client" async defer></script>
